# next-rocket-diesel-starter

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
client/: next.config.js
client/pages/: index.tsx
server/: .env  Cargo.toml  Rocket.toml
server/src/: main.rs
