[package]
name = "server"
version = "0.1.0"
authors = ["Natalie Lenart <ninjomcs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_postgres_pool"] }
diesel = { version = "1.4.4", features = ["postgres"] }
